5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2506.log
== TEST (2019-05-11 15:47:25) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis são tirados: "))

A = QT
cont = 0

while (QT > 0 and QT < 12000)
	A = (A + (A*PCT)/100) - Tirados
	cont = cont + 1
	print(A,cont)

-- ERROR:
File "XXXX", line 8
    while (QT > 0 and QT < 12000)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:47:38) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis são tirados: "))

A = QT
cont = 0

while (QT > 0 and QT < 12000):
	A = (A + (A*PCT)/100) - Tirados
	cont = cont + 1
	print(A,cont)

-- OUTPUT:
1173.04 1
1108.4224 2
1039.9277439999998 3
967.3234086399998 4
890.3628131583998 5
808.7845819479038 6
722.311656864778 7
630.6503562766646 8
533.4893776532645 9
430.4987403124603 10
321.32866473120794 11
205.6083846150804 12
82.94488769198523 13
-47.078419046495654 14
-184.9031241892854 15
-330.9973116406425 16
-485.85715033908104 17
-650.0085793594259 18
-824.0090941209914 19
-1008.4496397682509 20
-1203.956618154346 21
-1411.1940152436068 22
-1630.8656561582231 23
-1863.7175955277166 24
-2110.54065125938 25
-2372.1730903349426 26
-2649.5034757550393 27
-2943.4736843003416 28
-3255.0821053583622 29
-3585.387031679864 30
-3935.510253580656 31
-4306.640868795495 32
-4700.039320923225 33
-5117.041680178619 34
-5559.064180989336 35
-6027.608031848697 36
-6524.264513759618 37
-7050.7203845851955 38
-7608.763607660308 39
-8200.289424119926 40
-8827.306789567123 41
-9491.94519694115 42
-10196.461908757617 43
-10943.249623283074 44
-11734.844600680059 45
-12573.935276720862 46
-13463.3713933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:48:29) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis sao tirados: "))

A = QT
cont = 0

while (QT > 0 and QT < 12000):
	A = (A + (A*PCT)/100) - Tirados
	cont = cont + 1
	print(A,cont)

-- OUTPUT:
1173.04 1
1108.4224 2
1039.9277439999998 3
967.3234086399998 4
890.3628131583998 5
808.7845819479038 6
722.311656864778 7
630.6503562766646 8
533.4893776532645 9
430.4987403124603 10
321.32866473120794 11
205.6083846150804 12
82.94488769198523 13
-47.078419046495654 14
-184.9031241892854 15
-330.9973116406425 16
-485.85715033908104 17
-650.0085793594259 18
-824.0090941209914 19
-1008.4496397682509 20
-1203.956618154346 21
-1411.1940152436068 22
-1630.8656561582231 23
-1863.7175955277166 24
-2110.54065125938 25
-2372.1730903349426 26
-2649.5034757550393 27
-2943.4736843003416 28
-3255.0821053583622 29
-3585.387031679864 30
-3935.510253580656 31
-4306.640868795495 32
-4700.039320923225 33
-5117.041680178619 34
-5559.064180989336 35
-6027.608031848697 36
-6524.264513759618 37
-7050.7203845851955 38
-7608.763607660308 39
-8200.289424119926 40
-8827.306789567123 41
-9491.94519694115 42
-10196.461908757617 43
-10943.249623283074 44
-11734.844600680059 45
-12573.935276720862 46
-13463.3713933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:51:38) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis sao tirados: "))

A = QT
cont = 0


while (QT > 0 and QT < 12000):
	A = A + ((A*PCT)/100) - Tirados
	cont = cont + 1
	print(cont)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:53:59) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis sao tirados: "))

A = QT
cont = 0


while (A > 0 and A < 12000):
	A = A + ((A*PCT)/100) - Tirados
	cont = cont + 1
	print(cont)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:57:31) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis sao tirados: "))

A = QT
cont = 0


while (A > 0 and A < 12000):
	A = A + ((A*PCT)/100) - Tirados
	cont = cont + 1
if (A <= 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:58:00) 
-- CODE:
QT = int(input("Quantidade de tambaqui: "))
PCT = float(input("percy de crecimento anual de tambaqui: "))
Tirados = int(input("insira quantos tambaquis sao tirados: "))

A = QT
cont = 0


while (A > 0 and A < 12000):
	A = A + ((A*PCT)/100) - Tirados
	cont = cont + 1
if (A <= 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)

-- EXECUTION TIME:
0.143996
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
